Jumping wiseoldman prevented

--- a/src/components/main/home/updatepoll/idlestate/IdleState.module.css
+++ b/src/components/main/home/updatepoll/idlestate/IdleState.module.css
@@ -45,6 +45,7 @@
 .wiseOldManWrap {
   position: relative;
   padding: 10px 0px;
+  min-height: 151px;
 }
 
 .sphere {
